--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "main": "index.js",
   "repository": "https://github.com/WangyanhuiRea/sdk.git",
   "license": "MIT",
+  "destFolder": "dist",
+  "scripts": {
+    "build": "gulp release",
+    "build:ts": "tsc -p tsconfig.json --declaration"
+  },
   "devDependencies": {
     "@types/node": "^12.0.2",
     "awesome-typescript-loader": "^5.2.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
     "gulp-cli": "^2.2.0",
+    "gulp-json-editor": "^2.5.2",
     "gulp-typescript": "^5.0.1",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.4.5",
