--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "webpack": "^4.32.2",
     "webpack-bundle-analyzer": "^3.3.2"
   },
-  "peerDependencies": {}
+  "peerDependencies": {},
+  "dependencies": {
+    "axios": "^0.18.0"
+  }
 }
