--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-json-editor": "^2.5.2",
     "gulp-typescript": "^5.0.1",
     "source-map-loader": "^0.2.4",
+    "ts-node": "^8.2.0",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2",
     "webpack-bundle-analyzer": "^3.3.2"
